compatibility-tests/compile-fail/tests/ui/duplication-backtrace-delegate-attributes.stderr
error: Multiple `backtrace` attributes are not supported on a field
 --> $DIR/duplication-backtrace-delegate-attributes.rs:8:17
  |
8 |         #[snafu(backtrace(delegate))]
  |                 ^^^^^^^^^^^^^^^^^^^
